--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 </section>
 
 <section class="why-us">
-    <h2>Why Choose PropsWorks?</h2>
+    <h2>Why Choose E3 Studio?</h2>
     <div class="features-grid">
         <div class="feature">
             <h4>Expert Team</h4>
