--- a/templates/services/order_confirmation.html
+++ b/templates/services/order_confirmation.html
@@ -91,8 +91,7 @@
             <h3>Questions?</h3>
             <p>If you have any questions about your order, please contact us:</p>
             <p>
-                <strong>Email:</strong> support@propsworks.com<br>
-                <strong>Phone:</strong> (555) 123-4567
+                <strong>Email:</strong> support@propsworks.com
             </p>
         </div>
     </div>
